<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_sel_home"
        android:title="@string/home"
        android:icon="@drawable/home_icon_24dp"
        />
    <item
        android:id="@+id/share_memento"
        android:title="@string/share_memento"
        android:icon="@drawable/share_24dp"
        />
    <item
        android:id="@+id/tutorial"
        android:title="@string/tutorial"
        android:icon="@drawable/tutorial_24dp"
        />
    <item
        android:id="@+id/add_notes"
        android:title="@string/add_notes"
        android:icon="@drawable/add_notes_24dp"
        />
    <item
        android:id="@+id/camera"
        android:title="@string/view_mementos"
        android:icon="@drawable/ar_icon"
        />

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_sel_user_profile"
                android:title="@string/user"
                android:icon="@drawable/profile_image"
                />
        </menu>
    </item>
    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nav_sel_settings"
                android:title="@string/setting"
                android:icon="@drawable/settings"
                />
        </menu>
    </item>
</menu>